[package]
name = "pds_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.3"
screenshots = "0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24.7"
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
nfd = "0.0.4"
tokio = { version = "1.32.0", features = ["full"] }